# Customer_Support_using-Agentic_Memory

./: .gitignore  README.md  main.py  pyproject.toml
agents/: agent.py  clear_memory.py  create_datasets.py  evaluator.py  guideline_agent.py  service_agent.py  skill_agent.py  skill_file_agent.py  skill_function.py  skills_file_functions.py  training.py
memory/: guidelines.txt
memory/skills/complaint/: SKILL.md
memory/skills/payment-issue/: SKILL.md
memory/skills/track-refund/: SKILL.md
utils/: config.py  data.py  lms.py  myclasses.py
